--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
         <artifactId>skopout</artifactId>
         <version>1.1</version>
     </parent>
-    
     <groupId>com.amazonaws</groupId>
     <artifactId>dynamodb-geo</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>Amazon DynamoDB Geo on the AWS SDK for Java</name>
     <description>Geo Library for Amazon DynamoDB provides methods to create, retrieve, 
@@ -29,10 +29,6 @@
         </license>
     </licenses>
 
-    <properties>
-        <aws-java-sdk.version>1.5.5</aws-java-sdk.version>
-    </properties>
-
     <dependencies>
         <!-- The AWS SDK for Java, and its dependencies on libraries like Jackson, 
         are required -->
@@ -44,7 +40,7 @@
         <dependency>
             <groupId>com.google.common.geometry</groupId>
             <artifactId>s2-geometry-java</artifactId>
-            <version>${project.version}</version>
+            <version>1.0</version>
         </dependency>
         
         <dependency>
@@ -79,7 +75,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
                         <source>1.6</source>
-                        <target>1.6</target>
+                        <target>1.8</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
